--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
         <h2>Version 3</h2>
 
         <p>Here is the link for all of my Assignments</p>
-        <a href="Software-Engineering-Assignments-v2-yt">Click here</a>
+        <a href="created-a-game.html">Click here</a>
     </body>
 </html>
