Made some changes.

--- a/GTK.html
+++ b/GTK.html
@@ -13,7 +13,7 @@
         <h1>Yasir Tahir</h1>
         <a href="">yasirtahir@lewisu.edu</a>
         <br>
-        <img src="Yasir's.jpeg" width="300" height="250"/>
+        <img src="yasir.jpeg" width="300" height="250"/>
     </div>
 <h2>Introduction</h2>
 <p>I am a College Junior majoring in Computer Science. I have wanted to become a Pilot and I was also interested in CS field. One of my hobbies were programming since I was young.
@@ -32,8 +32,8 @@ Technically, I am also a Pilot, I got my Private Pilot license from local flying
     one day.</p>
 <h2>Greatest Innovation</h2>
     <ul class="fa-ul">
-        <li><span class="fa-li"><i class="far fa-square"></i></span>Created a Website. <a href="Created a website.html">Click here! to read more about it.</a></li>
-        <li>Created a game. <a href="Created a game.html">Click here! to read more about it.</a></li>
+        <li><span class="fa-li"><i class="far fa-square"></i></span>Created a Website. <a href="created-a-website.html">Click here! to read more about it.</a></li>
+        <li>Created a game. <a href="created-a-game.html">Click here! to read more about it.</a></li>
     </ul>
 <h2>Fun Fact</h2>
     <p>I am an International student. Orignially, I belong to Pakistan, I came in US in 2017, I had a big culture and weather shock but now I am well adjusted here and I like it here a lot. I don't do parties and drinking for obvious reasons but there is still a lot to enjoy in our culture. I am living with my family in Wisconsin now so that's great and I try to be positive and happy all the time and be grateful to God for what I have.</p>
