--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
         <h1>Yasir Tahir</h1>
         <h2>Course: Software Engineering</h2>
         <h2>Assignment Website Portfolio</h2>
-        <h2>Version 3</h2>
+        <h2>Version 2</h2>
 
-        <p>Here is the link for all of my Assignments</p>
-        <a href="created-a-game.html">Click here</a>
+        <p>Here are the links for all of my Assignments</p>
+        <p>Sprint 1 Assignment</p>
+        <a href="gtk.html">Click here</a>
     </body>
 </html>
